--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section class="hero">
           <div class="hero__container container container--px flex">
             <div class="hero__text">
-              <h1 class="hero__title">Africardo g<span class="hero__title-underline">ames.</span></h1>
+              <h1 class="hero__title">Africardo G<span class="hero__title-underline">ames.</span></h1>
               <p class="hero__paragraph">.
               </p>
               our game shop is designed to offer premium fun
